(20/02) Formatação de texto]

--- a/01-olamundo.html
+++ b/01-olamundo.html
@@ -14,5 +14,10 @@
     <h6>Título de nível 6</h6>
     <p>Paragrafo de texto (txt)
         <br>vamo tentar  a quebra de linha</p><br></p>
+        <p>Sinal de MENOR QUE: &lt; (Less Than) </p>
+        <p>Sinal de MAIOR QUE: &gt; (Greater Than)</p>
+        &varr;,&darr;,&rarr;,&larr;.
+       <p> EMOJI sapatinho = &#x1F45E;</p>
+
 </body>
 </html>
