--- a/02-textos.html
+++ b/02-textos.html
@@ -19,12 +19,19 @@
         }
         h1{
             color: blue;
+            text-align: center;
         }
-        
+        p.dir{
+           text-align: right;   
+
+        }
        </style>
 </head>
 <body>
     <h1>Formatação de textos</h1>
+
+    <p class="dir">"História baseada fatos reais."</p>
+
     <p> Orkutilson morava na <address>Rua do Sobe e Desce,333</address>
     , e seu e-mail era <address>orkutilson@gmail.com</address>.
 </p>
@@ -40,7 +47,21 @@
 <p>Orkutilson tmbém gostava de fórmulas. Suas preferidas eram
     H<sub>2</sub>O e E = mc <sup>2</sup>.
 </p>
+<p>Sua frase favorita era <quote>"Penso, logo existo"(Descartes)</quote>.E seu trecho de música
+preferido era: </p>
+<blockquote>
+      Há tantos mundos diferentes<br>
+      Tantos sóis diferentes.<br>
+      Mas vivemos em mundos diferentes<br>
+      (Dire Straits, Brothers in Arms)
+</blockquote>
 
+<p>Em suas horas vagas, Orkutilson era um membro ativo da <abbr title="Associção dos Moradores do Bairro do Limão">ASMOBALI</abbr>e estudava
+<abbr title="HyperText Warkup Language">HTML</abbr>. Suas tags 
+favoritas eram <code>&lt;blockquote&gt;</code> e 
+<code>&lt;address&gt;</code>.
+</p>
+<p class="dir"><em>Autor: Desconhecido</em></p>
 
 </body>
 </html>
