--- a/03-listas.html
+++ b/03-listas.html
@@ -8,8 +8,8 @@
   
 <body>
 
-    <ul type="c">
-        <ol type="a"></ol>
+    <ul type="circle">
+        <ol type="a">
         
     <h1>Macarrão de panela de pressão</h1>
     <h2>Ingredientes:</h2>
