(20/03)Links download e imagens dinamicas

--- a/07-Imagens2.html
+++ b/07-Imagens2.html
@@ -32,6 +32,8 @@
             <figcaption>A Apptiva oferece as melhores tecnologias para Educação a Distância. Faça como essa nossa aluna!</figcaption>
     </figure>
 
-    <img  style="width: 50%; border: 1px solid blue" src="img/svg-logo.svg" alt="Logotipo do formato SVG"
+    <img  style="width: 50%; border: 1px solid blue" src="img/svg-logo.svg" alt="Logotipo do formato SVG" >
+
+    
 </body>
 </html>
