--- a/08-links.html
+++ b/08-links.html
@@ -75,22 +75,33 @@
         <a href="https://produto.mercadolivre.com.br/MLB-1459346254-livro-html-e-css-projete-e-construa-websites-alta-books-_JM#position=3&type=item&tracking_id=89c6f044-2670-4d23-9dc8-2e402dad1c91" rel="nofollow">livro de html</a>
 
 
-    <br>
-        <a href="07-Imagens2.html" rel="prev">Pagina anterior</a>
+        <br>
+            <a href="07-Imagens2.html" rel="prev">Pagina anterior</a>
 
-    <br>   
+        <br>   
     
-    <a href="09-Não-existe.html"rel="next">Pagina seguinte</a>
+            <a href="09-Não-existe.html"rel="next">Pagina seguinte</a>
 
-    <br>
+        <br>
 
-    <a href="http://www.pudim.com.br" rel="external" do pudim</a>
+            <a href="http://www.pudim.com.br" rel="external" do pudim</a>
 
-    <br>
+        <br>
 
-    <a href="https://www.facebook.com/guilhermesouza.jesus.9" rel="author" target="_blank">Fale com o Autor</a>
+            <a href="https://www.facebook.com/guilhermesouza.jesus.9" rel="author" target="_blank">Fale com o Autor</a>
 
-    </br>
+        </br>
 
+    </div>
+    <!--
+        LINK DOWNLOAD: DOWNLOAD="nomedoarquivo.ext" nome do arquivo baixado pode ser diferente do arquivo original type:MIME
+    -->
+    <p>Para fazer download da imagem, acesse <a href="img/apptiva-logo.png" download="logo.png" type="image/png">aqui!</a>.</p>
+
+    <p> <a href="arquivos/horario-aulas-dsm-not-2021-1.pdf" download="horario.pdf" type="application/pdf">Horario de aulas.</a></p>
+
+    <p><a href="arquivos/tg-modelo-monografia-v20190904.docx" download="monografia.docx" type="application/msword">Modelo monografia</a> </p>
+
+    <p> <a href="https://site.fatecfranca.edu.br/files/tg-modelo-slides-2018.ppt" download="slides.ppt" type="application/vnd.ms-powerpoint">Modelo de <em>slide</em></a> </p>
  </body>
 </html>
