--- a/11-Vídeo.html
+++ b/11-Vídeo.html
@@ -8,6 +8,28 @@
 <body>
     <h1>Vídeo em HTML</h1>
 
+    <p>Para entender os formatos de vídeo, é preciso entender primeiro o que são os <em>codecs</em> (codificadores/decodificadores). Trata-se de algoritmos que codificam e depois decodificam várias imagens em sequência para criar a ilusão de movimento. Alguns <em>codecs</em> em vídeo não lidam com a parte de som. Com isso, torna-se necessário acrescentar o áudio em uma parte separada, usando um dos formatos de áudio já estudados.</p>
+
+    <p>Para juntar em partes de vídeo, áudio e outras informações (como por exemplo: as legendas) em um único arquivo, existem os formatos <em>container</em>. Esses formatos podem parecer iguais por fora, enquanto, por dentro, trazem trilhas multimídia produzidas com <em>codecs</em> diferentes. Por isso, o equipamento que irá reproduzi-los precisa, além de reconhecer o formato do arquivo <em>container</em>, ter também instalados os <em>codecs</em> para decodificar áudio e vídeo. Os navegadores trazem instalados os <em>codecs</em> mais comuns.</p>
+
+    <ul>
+        <li><strong>MP4</strong>: Formato introduzido em 2001 pela ISO (<em>International Stardards Organization</em> Organização Internacional de Padrões), e que se tornou o padrão do mercado. É um formato <em>container</em>, que suporta vários <em>codecs</em> tanto de áudio como vídeo, que usualmente estão sob compressão.</li>
+
+        <li><strong>M4V</strong>: Formato introduzido pela Apple, tecnicamente semelhante ao MP4. No entanto, esse formato suporta DRM (<em>Digital Rights Management</em>, Gerenciamento de Direitos Digitais), permitindo que conteúdos protegidos por direitos autorais só possam ser reproduzidos por quem tiver adquirido a licença pra tal.</li>
+
+        <li><strong>WEBM</strong>: Projeto irmao do WebP, iniciado pela fundação Xiph.org em 2010 e depois assumido pelo Google. É também um formato <em>container</em>, que promete melhor qualidade de compressão em um menor tamanho de arquivo quando comparado ao MP4.</li>
+
+        <li><strong>OGV</strong>: Formato <em>container</em> da família OGG Vorbis, introduzido pela fundação Xiph.org em 2004, de livre utilização.</li>
+
+        <li><strong>AVI</strong>: Sigla para <em>Áudio Vídeo InterLeaved</em>(Áudio e Vídeo Entrelaçados), introduzido pela Microsoft em 1992. É um formato sem compressão, tendendo a gerar arquivos muito grandes.</li>
+    </ul>
+
+    <h2>Problema com a hospedagem de vídeos</h2>
+
+    <p>Hospedar vídeos em seus próprio <em>website</em> pode sair caro, pois várias hospedagens atualmente cobram pra tráfego. Um típico vídeo de 500Mb de tamanho, por exemplo, ao ser reproduzido 20 vezes, terá consumido 10Gb de tráfego (ou de banda, como se ouve com mais frequência).</p>
+
+    <p>Portanto, na maioria das vezes, o melhor a fazer é hospedar  seu vídeo em serviços como o Youtube ou o Vímeo e apenas incoporar ("linkar") o vídeo em seu <em>site</em>. Enquanto vídeos hospedes no Youtube geralmente estarão disponíveis para um público amplo, enquanto o Vímeo, mediante pagamento, permite restringir o acesso aos vídeos.</p>
+
     <h2>Exemplo de vídeo com múltiplas fontes</h2>
 
     <video controls width="400px" poster="video/reduzir-pdf-thumb.png">
@@ -16,5 +38,16 @@
                 <source src="video/reduzir-pdf.webm" type="video/webm">
                     <p>Não foi possível baixar o vídeo. Faça o <a href="video/reduzir-pdf.mp4" download="reduzir-pdf.mp4" type="video.mp4">download</a> do arquivo. </p>
     </video>
+
+    <h2>Exemplos de vídeos incorporados</h2>
+
+    <p>Vídeo incorporado do Youtube:</p>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/jgQjeqGRdgA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <p>Víde incorporado do Vímeo:</p>
+    
+    <iframe src="https://player.vimeo.com/video/45160630" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+
 </body>
 </html>
