--- a/14-Site.html
+++ b/14-Site.html
@@ -26,19 +26,26 @@
                 <!--sempre ter um titulo dentro da section-->
                 <h1>Notícias</h1>
                     
-                    <article><!--Artigo Principal/artigo de noticias-->
-                        <h1><a href="#">Tião da venda e Carla Manicure se casam após 15 anosde noivado</a></h1>
+                    <article class="destaque"><!--Artigo Principal/artigo de noticias-->
+                        <h2>Social</h2>
+                        <h1><a href="#">Tião da venda e Carla Manicure se casam após 15 anos de noivado</a></h1>
+                        <div class="foto-texto">
+                        <img src="site/cb175fb8-a50e-4baf-a068-86cdfcb283a0.jpg" alt="Foto dos noivos" title="Agostinho carrara"/>
                         <p>Festa de casamento foi interrompida pelos fiscais da Vigilância Sanitária</p>
+                    </div>
                     </article>
                     <article><!--Artigo Principal/artigo de noticias-->
+                        <h2>Esporte</h2>
                         <h1><a href="#">Zagueiro Zé Parrudo Quebra a perna de atacante rival em jogo válido pelo Varzeano</a></h1>
                         <p>O traficante Moíses do Beco não percebeu que "cliente" era da polícia</p>
                     </article>
                     <article><!--Artigo Principal/artigo de noticias-->
+                        <h2>Policial</h2>
                         <h1><a href="#">Traficante é preso após tentar vender droga ao Policial à paisana</a></h1>
-                        <p>Festa de casamento foi interrompida pelos fiscais da Vigilância Sanitária</p>
+                        <p>O traficante Moíses do Beco não percebeu que "cliente" era da polícia</p>
                     </article>
                     <article><!--Artigo Principal/artigo de noticias-->
+                        <h2>Economia</h2>
                         <h1><a href="#">Preço do litrão já se aproxima de R$15,00</a></h1>
                         <p>População revoltada contra o aumento do preços promovido por Ademar do Bar</p>
                     </article>
@@ -46,9 +53,12 @@
             </section>
             <section id="secundaria">
                 <h1>Conteúdo Relacionado</h1>
-                <aside><!--Artigo segundario-->
                 
+                <aside>
+                    <img src="site/pexels-sohail-na-807598.jpg" alt="foto de folhas" title="Foto:SoHail">
+                    <h1><a href="#">Mulher do verdureiro emagrece 36kg tomando chá e choca aquebrada; SAIBA MAIS</a></h1>
                 </aside>
+
             </section>
         </div>
         <footer><!--Rodapé-->
