(26/05)Menu para celular

--- a/portal/14-Site.html
+++ b/portal/14-Site.html
@@ -40,7 +40,10 @@
     </header>
     
     <nav id="menu"> <!-- Menu -->
-        <ul>
+        <div id="menu-contraido">
+            <input type="checkbox"><!--checkbox caixinha de permissao-->
+            <span></span>
+            <ul>
             <li><a href="#"> Home</a></li>
             <li><a href="#"> Geral</a></li>
             <li><a href="#"> Política</a></li>
@@ -48,7 +51,8 @@
             <li><a href="#"> Entretenimento</a></li>
             <li><a href="#"> Social</a></li>
             <li><a href="#"> Tecnologia</a></li>
-        </ul>
+            </ul>
+        </div>
     </nav>
     
     <div id="content"> <!-- Área de conteúdo -->
